--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
 plugins {
-    id "io.freefair.lombok" version "5.0.0-rc6"
+	id 'java'
 }
 
 apply from: "$rootDir/gradle/versions.gradle"
 
 allprojects {
-	apply plugin: 'maven'
 	group "com.adr"
 	version projectVersion
 	repositories {
@@ -13,16 +12,24 @@ allprojects {
 	}
 }
 subprojects {
-	apply plugin: "io.freefair.lombok"
 	apply plugin: 'java'
 
-	sourceCompatibility = JavaVersion.VERSION_13
-	targetCompatibility = JavaVersion.VERSION_13
-
-	tasks.withType(JavaCompile) {
-        options.incremental = true
-    }
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 
 	compileJava.options.encoding = 'UTF-8'
 	compileTestJava.options.encoding = 'UTF-8'
+
+	dependencies {
+		testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
+		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+	}
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
 }
+
+
+
+
